@@ -126,21 +126,27 @@ sub usage {
 Usage: apache2buddy.pl [OPTIONS]
 If no options are specified, the basic tests will be run.
 
-	-h, --help		Print this help message
-	-p, --port=PORT		Specify an alternate port to check (default: 80)
-	    --pid=PID		Specify a PID to bypass the "Multiple PIDS listening on port 80" error.
-	-v, --verbose		Use verbose output (this is very noisy, only useful for debugging)
-	-n, --nocolor		Use default terminal color, dont try to be all fancy! 
-	-H, --noheader		Do not show header title bar.
-	-N, --noinfo		Do not show informational messages.
-	-K, --no-ok		Do not show OK messages.
-	-W, --nowarn		Do not show warning messages.
-	-L, --light-term	Show colours for a light background terminal.
-	-r, --report		Implies -HNWK or --noinfo --nowarn --no-ok --noheader --skip-maxclients --skip-php-fatal --skip-updates
-	-P, --no-check-pid	DON'T Check the Parent Pid File Size (only use if desperate for more info, results may be skewed).
-	    --skip-maxclients	Skip checking in maxclients was hit recently, can be slow, especialy if you have large log files.
-            --skip-php-fatal    Skip checking for PHP FATAL errors, can be slow, especialy if you have large log files.
-            --skip-updates      Skip checking for package updates, can be slow or problematic, causing the script to hang.
+	-h, --help		     Print this help message
+	-p, --port=PORT		     Specify an alternate port to check (default: 80)
+	    --pid=PID		     Specify a PID to bypass the "Multiple PIDS listening on port 80" error.
+	-v, --verbose		     Use verbose output (this is very noisy, only useful for debugging)
+	-n, --nocolor		     Use default terminal color, dont try to be all fancy! 
+	-H, --noheader		     Do not show header title bar.
+	-N, --noinfo		     Do not show informational messages.
+	-K, --no-ok	 	     Do not show OK messages.
+	-W, --nowarn		     Do not show warning messages.
+	-L, --light-term	     Show colours for a light background terminal.
+	-r, --report		     Implies -HNWK or --noinfo --nowarn --no-ok --noheader --skip-maxclients --skip-php-fatal --skip-updates
+	-P, --no-check-pid	     DON'T Check the Parent Pid File Size (only use if desperate for more info, results may be skewed).
+	    --skip-maxclients	     Skip checking in maxclients was hit recently, can be slow, especialy if you have large log files.
+            --skip-php-fatal         Skip checking for PHP FATAL errors, can be slow, especialy if you have large log files.
+            --skip-updates           Skip checking for package updates, can be slow or problematic, causing the script to hang.
+	-O, --skip-os-version-check  Skips past the OS version check.
+                                     Allows one to bypass EOL version showstopper but be mindful:
+                                      skipping the os version check is not recommended as features may be 
+                                      deprecated or removed and apache2buddy is not backward compatible 
+                                      with end of life operating systems, this may cause errors and unpredictable 
+                                      behaviour.
 
 
 Key:
@@ -198,6 +204,9 @@ our $NOHEADER = 0;
 # by default, check pid size 
 our $NOCHKPID = 0;
 
+# by default, check OS support
+our $NOCHKOS = 0;
+
 # add 'skip section' options...
 
 # by default, do not skip maxclients check
@@ -227,6 +236,7 @@ GetOptions(
 	'skip-maxclients' => \$SKIPMAXCLIENTS,
 	'skip-php-fatal' => \$SKIPPHPFATAL,
 	'skip-updates' => \$SKIPUPDATES,
+	'skip-os-version-checki|O' => \$NOCHKOS,
 	'nonews' => \$NONEWS
 );
 
@@ -1582,7 +1592,11 @@ sub preflight_checks {
 		if ( ! $NOINFO ) { show_info_box(); print "Distro: ${CYAN}" . $distro . "${ENDC}\n"}	
 		if ( ! $NOINFO ) { show_info_box(); print "Version: ${CYAN}" . $version . "${ENDC}\n"}	
 		if ( ! $NOINFO ) { show_info_box(); print "Codename: ${CYAN}" . $codename . "${ENDC}\n"}	
-		check_os_support($distro, $version, $codename);
+		if ( ! $NOCHKOS ) { 
+			check_os_support($distro, $version, $codename);
+		} else {
+			show_warn_box(); print "${YELLOW}OS Version Checks were skipped by user directive, you may get errors.${ENDC}\n";
+		}
 	} else {
 		# fallback when python fails to deliver - eg on CentOS5 which is EOL anyway, we get:
 		# Traceback (most recent call last):
@@ -1599,7 +1613,11 @@ sub preflight_checks {
 			if ( ! $NOINFO ) { show_info_box(); print "Distro: ${CYAN}" . $distro . "${ENDC}\n"}	
 			if ( ! $NOINFO ) { show_info_box(); print "Version: ${CYAN}" . $version . "${ENDC}\n"}	
 			if ( ! $NOINFO ) { show_info_box(); print "Codename: ${CYAN}" . $codename . "${ENDC}\n"}	
-			check_os_support($distro, $version, $codename);
+			if ( ! $NOCHKOS ) { 
+				check_os_support($distro, $version, $codename);
+			} else {
+				show_warn_box(); print "${YELLOW}OS Version Checks were skipped by user directive, you may get errors.${ENDC}\n";
+			}
 		}
 	}		 
 
